--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -31,6 +31,7 @@
 /* Colors */
 /*-------  1.1 Bootstrap  --------*/
 @import url("https://fonts.googleapis.com/css?family=Krub:400,500,600");
+@import url(https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap);
 /* Bootstrap variables */
 /* Colors */
 /* Grid */
@@ -60,7 +61,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Krub", sans-serif;
+  font-family: "Noto Sans KR";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
