--- a/src/main/resources/templates/solution/index.html
+++ b/src/main/resources/templates/solution/index.html
@@ -8,11 +8,11 @@
          <div class="container">
             <div class="tt-layout-404">
                <span class="tt-icon">
-               <img th:src="@{images/single-topic-img01.jpg}" src="/images/single-topic-img01.jpg"/>
+               <!-- <img th:src="@{images/single-topic-img01.jpg}" src="/images/single-topic-img01.jpg"/> -->
                </span>
                <h6 class="tt-title">방문을 환영합니다.</h6>
                <p>어렵고 힘든 문제가 있으신가요?<br>
-                  <a href="/solution/apply" class="tt-color-dark tt-underline-02">문제등록</a>을 통해 고수님들의 도움을 받아보세요.
+                  <a th:href="${session.user?.type} == 2 ? '/solution' : '/solution/apply'" class="tt-color-dark tt-underline-02">문제등록</a>을 통해 고수님들의 도움을 받아보세요.
                </p>
             </div>
             <div class="tt-topic-list tt-offset-top-55" >
