--- a/src/main/resources/templates/solution/help/intro.html
+++ b/src/main/resources/templates/solution/help/intro.html
@@ -1,30 +1,56 @@
-<!doctype html>
-<html lang="ko">
-   <head th:replace="solution/widget/head :: head"></head>
-<body>
-<!-- tt-mobile menu -->
-<nav th:replace="solution/widget/mobile-menu :: m-menu"></nav>
-<header th:replace="solution/widget/pc-menu :: p-menu"></header>
-
-<main id="tt-pageContent" class="tt-offset-small">
-    <div class="container">
-        <div class="tt-tab-wrapper" style="cursor:pointer;">
-            <div class="tt-wrapper-inner">
-                <ul class="nav nav-tabs pt-tabs-default" role="tablist">
-                    <li class="nav-item show" onclick="location.href='/solution/list?min=0&max=10&state=0'">
-                        <a th:classappend="${#strings.equals(param.state, 0)} ? active" class="nav-link" data-toggle="tab" role="tab"><span>전체</span></a>
-                    </li>
-                    <li class="nav-item" onclick="location.href='/solution/list?min=0&max=10&state=4'">
-                        <a th:classappend="${#strings.equals(param.state, 4)} ? active" class="nav-link" data-toggle="tab" role="tab"><span>답변완료</span></a>
-                    </li>
-                    <li class="nav-item" onclick="location.href='/solution/list?min=0&max=10&state=1'">
-                        <a th:classappend="${#strings.equals(param.state, 1)} ? active" class="nav-link" data-toggle="tab" role="tab"><span>답변대기중</span></a>
-                    </li>
-                    <li class="nav-item" onclick="location.href='/solution/list?min=0&max=10&state=5'">
-                        <a th:classappend="${#strings.equals(param.state, 5)} ? active" class="nav-link" data-toggle="tab" role="tab"><span>리뷰완료</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</main>
+<div class="tt-wrapper-inner tt-layout-tab">
+    <h6 class="tt-title tt-size-lg">
+        Community Rules
+    </h6>
+    <p>Envato is a community of creatives who come together to share ideas and help each other succeed.</p>
+    <p>
+        We invite you to join in, but do have a few rules. The rules and values below exist to help you understand what it means to be a member of the community and cover all aspects of community interaction on Envato forums, blogs, contests and events. We’re committed to upholding them, and we hope you will be too.
+    </p>
+    <dl class="dl-layout-01">
+        <dt>We believe when the community succeeds, we succeed.</dt>
+        <dd>
+            We love healthy competition, but feel we’re all better off when we’re sharing ideas, knowledge and skills and helping one another. We come to give back, not shamelessly self-promote.
+        </dd>
+        <dt>
+            We’re a global community of many types of people.
+        </dt>
+        <dd>
+            We are from all corners of the earth and a glorious melting pot of creative fields, skill levels, cultures, religions and more. We think the opportunity for anyone to achieve success no matter where they come from leads to a more meritocratic and equal world.
+        </dd>
+        <dt>
+            We celebrate individuality and embrace diversity.
+        </dt>
+        <dd>
+            We encourage different viewpoints as long as they’re presented in a way that’s constructive and respectful. Personal attacks as well as any behavior that is hateful or offensive based on race, ethnicity, national origin, religion, gender or sexual orientation are not okay.
+        </dd>
+        <dt>
+            We’re excited about and inspired by collaboration.
+        </dt>
+        <dd>
+            By collaborating with people from different backgrounds, we are exposed to new ideas and perspectives that fuel the creative process and innovation.
+        </dd>
+        <dt>
+            We’re always learning because we’re hungry and curious.
+        </dt>
+        <dd>
+            We’re all students and teachers. Our world moves super fast and we stay ahead of the pack by pushing and pulling each other forward. We don’t follow the trends, we make them.
+        </dd>
+    </dl>
+    <h6 class="tt-title">We follow a few hard rules. Please DON’T:</h6>
+    <ul class="tt-list-dot tt-indent-top01">
+        <li>Participate in or encourage personal attacks, call out another user and/or sabotage a user’s item.</li>
+        <li>Discuss politics, pornography, religion or competitive marketplaces.</li>
+        <li>Spam.</li>
+        <li>Troll or flame.</li>
+        <li>Link to freebies in categories of items that are sold on Market.</li>
+        <li>Blatantly self-promote (see A Note on Self-promotion below).</li>
+        <li>Solicit for any kind of material support, donations, aid, etc.</li>
+        <li>Discuss pricing of items/services in an author-driven pricing category or on Studio.</li>
+        <li>Talk about or link to piracy, warez, illegal activity of any kind, or competitor sites or items.</li>
+        <li>Request or post personal (or identifying) information about any user or any other person.</li>
+        <li>Post anything that would infringe on another person’s intellectual property rights.</li>
+    </ul>
+    <p class="tt-indent-top02">
+        We believe all ideas can (and should) be scrutinised, constructively.
+    </p>
+</div>
