--- a/src/main/resources/templates/solution/list.html
+++ b/src/main/resources/templates/solution/list.html
@@ -89,7 +89,7 @@
 
 
 
-                        <div class="tt-row-btn">
+                        <!-- <div class="tt-row-btn">
                           <nav aria-label="Page navigation example">
                             <ul class="pagination">
                               <li class="page-item">
@@ -109,7 +109,8 @@
                               </li>
                             </ul>
                           </nav>
-                        </div>
+                        </div>-->
+                        
                     </div>
                 </div>
             </div>
